Changelog
=========

1.7.1 (Unreleased)
------------------


1.7.0 (2011-07-19)
------------------

- Update <link /> element providing base-url for KSS with valid rel keyword
  ('alternate') and additional HTML5 attribute ``data-*``.
  References http://dev.plone.org/plone/ticket/11300
  [spliter]

1.6.2 (2011-01-03)
------------------

- Portlet is removed if it have lost its availability
  during kss action.
  This refs https://dev.plone.org/plone/ticket/11343
  [thomasdesvenain]

- Review portlet is updated when transition is passed.
  This refs http://dev.plone.org/plone/ticket/11337
  [thomasdesvenain]

1.6.1 (2010-07-18)
------------------

- Update license to GPL version 2 only.
  [hannosch]

1.6.0 (2010-07-01)
------------------

- Avoid deprecation warnings under Zope 2.13.
  [hannosch]

- Use a proper API to read response headers in tests.
  [hannosch]

- Avoid using the deprecated five:implements directive.
  [hannosch]

1.6.0a4 (2010-04-28)
--------------------

- Add RefreshViewletByClass command to ``zopecommands`` command set.
  This allow to fix event handlers that were broken because they were
  relying on viewlet (and manager) names
  instead of relying on their semantic.
  This refs http://dev.plone.org/plone/ticket/9703
  [gotcha]

1.6.0a3 (2010-04-09)
--------------------

- Better unicode character for dragging, better cursor.
  [limi]

1.6.0a2 (2010-02-18)
--------------------

- Changed replace_id in content_replacer.changeViewTemplate and
  content_replacer.replaceContentRegion to replace#content instead of
  redundant #region-content that is not in Plone anymore.
  [spliter]

- Updated markup to not use .documentContent.
  This refs http://dev.plone.org/plone/ticket/10231
  [limi]

1.6.0a1 (2009-11-19)
--------------------

- Fixed tests (portal-column-content is a div)
  [gotcha]

- Fixed refrehProvider zope command : providers do not need to inherit
  from Acquisition.Explicit anymore
  [gotcha]
