@@ -44,7 +44,6 @@ setup(name='plone.app.kss',
         'zope.lifecycleevent',
         'zope.viewlet',
         'Acquisition',
-        'Products.Archetypes',
         'Products.CMFCore',
         'Products.DCWorkflow',
         'Products.statusmessages',
